--- a/src/mathsmate/GeomQuiz.form
+++ b/src/mathsmate/GeomQuiz.form
@@ -343,7 +343,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\Leanne&amp;Ben\Desktop\MathsMate\q1GeomPic1.png"/>
+                  <Image iconType="3" name="/mathsmate/q1GeomPic1.png"/>
                 </Property>
               </Properties>
             </Component>
@@ -353,7 +353,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\Leanne&amp;Ben\Desktop\MathsMate\q1GeomPic1.png"/>
+                  <Image iconType="3" name="/mathsmate/q1GeomPic1.png"/>
                 </Property>
               </Properties>
             </Component>
@@ -363,7 +363,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\Leanne&amp;Ben\Desktop\MathsMate\q1GeomPic1.png"/>
+                  <Image iconType="3" name="/mathsmate/q1GeomPic1.png"/>
                 </Property>
               </Properties>
             </Component>
