--- a/src/mathsmate/TrigQuiz.form
+++ b/src/mathsmate/TrigQuiz.form
@@ -288,7 +288,7 @@
               <Properties>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\Leanne&amp;Ben\Desktop\MathsMate\q1TrigPic.png"/>
+                  <Image iconType="3" name="/mathsmate/q1TrigPic.png"/>
                 </Property>
               </Properties>
             </Component>
