--- a/src/mathsmate/NotesTrig.form
+++ b/src/mathsmate/NotesTrig.form
@@ -30,6 +30,8 @@
         <Property name="text" type="java.lang.String" value="jTextField1"/>
       </Properties>
     </Component>
+    <Component class="java.awt.TextArea" name="textArea1">
+    </Component>
   </NonVisualComponents>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -181,13 +183,27 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="java.awt.TextArea" name="textArea1">
+        <Container class="javax.swing.JScrollPane" name="jScrollPane3">
+          <AuxValues>
+            <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+          </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="50" y="140" width="300" height="440"/>
+              <AbsoluteConstraints x="60" y="110" width="280" height="420"/>
             </Constraint>
           </Constraints>
-        </Component>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+          <SubComponents>
+            <Component class="javax.swing.JTextArea" name="jTextArea1">
+              <Properties>
+                <Property name="columns" type="int" value="20"/>
+                <Property name="rows" type="int" value="5"/>
+                <Property name="text" type="java.lang.String" value="Far far away, behind the word &#xa;mountains, far from the countries V&#xa;okalia and Consonantia, there live &#xa;the blind texts. Separated they live&#xa; in Bookmarksgrove right at the coast&#xa; of the Semantics, a large language o&#xa;cean. A small river named Duden flow&#xa;s by their place and supplies it &#xa;with the necessary regelialia. I&#xa;t is a paradisematic country, in w&#xa;hich roasted parts of sentences fly into y&#xa;our mouth. Even the all-powerful &#xa;Pointing has no control about the &#xa;blind texts it is an almost unorthog&#xa;raphic life One day however a small &#xa;line of blind text by the name of Lorem Ip&#xa;sum decided to leave for the far World of Grammar. &#xa;The Big Oxmox advised her not to &#xa;do so, because there were thousands &#xa;of bad Commas, wild Question Marks&#xa; and devious Semikoli, but the Lit&#xa;tle Blind Text didn&#x2019;t listen. She p&#xa;acked her seven versalia, put her&#xa; initial into the belt and &#xa;&#xa;&#xa;,,,&#xa;,,,&#xa;&#xa;ma"/>
+              </Properties>
+            </Component>
+          </SubComponents>
+        </Container>
       </SubComponents>
     </Container>
   </SubComponents>
